--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               <p>We exclusively employ qualified staff members who possess the requisite skill set and frame of mind to not only construct a wonderful platform but also contribute to one another's development and create an outstanding team.</p>
               <ul>
                 <li><i class="ion-android-checkmark-circle"></i> Great product</li>
-                <li><i class="ion-android-checkmark-circle"></i> Right minset.</li>
+                <li><i class="ion-android-checkmark-circle"></i> Right mindset.</li>
                 <li><i class="ion-android-checkmark-circle"></i> Execellent skill.</li>
               </ul>
             </div>
@@ -237,7 +237,7 @@
                       แขวงจรเข้บัว เขตลาดพร้าว<br>
                       กรุงเทพมหานคร 10230 <br>
                       <strong>Phone:</strong> 082-536-3029<br>
-                      <strong>Email:</strong> hr@tmpsolutionth.com<br>
+                      <strong>Email:</strong> hr@indevlabs.io<br>
                     </p>
                   </div>
                 </div>
