--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="container d-flex h-100">
       <div class="row justify-content-center align-self-center">
         <div class="col-md-6 intro-info order-md-first order-last">
-          <h2>InDev Labs<br>Aim for Greater <span>Product!</span></h2>
+          <h2>InDev Labs<br>Strive for Better <span>Product!</span></h2>
           <div>
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
           </div>
