--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="social-links">
           <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
           <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-          <a href="https://app.gather.town/invite?token=toj6T5vcTPiozd1AQyXOYceEpYndFKSz" class="comment" target="_blank"><i class="fa fa-comment"></i></a>
+          <a href="https://app.gather.town/app/FLtHs5HDpVbBwfsf/Indev%20Labs" class="comment" target="_blank"><i class="fa fa-comment"></i></a>
         </div>
       </div>
     </div>
@@ -185,7 +185,6 @@
             </div>
           </div>
 
-
         </div>
 
       </div>
@@ -226,17 +225,12 @@
                       กรุงเทพมหานคร 10230 <br>
                       <strong>Phone:</strong> 082-536-3029<br>
                       <strong>Email:</strong> hr@indevlabs.io<br>
+                      <strong>Gather:</strong> <a href="https://app.gather.town/app/FLtHs5HDpVbBwfsf/Indev%20Labs" target="_blank">InDev Labs Town</a> <br>
                     </p>
                   </div>
                 </div>
-
-
             </div>
-
           </div>
-
-          
-
         </div>
 
       </div>
