Update Name Aoi

--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
 
           <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="member">
-              <img src="img/gee_me_007.png" class="" alt="" height="400px">
+              <img src="img/gee_me_001.png" class="" alt="" height="400px">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Nhong Sittapong</h4>
+                  <h4>Aoi - Suppachai</h4>
                   <span>Sr. Developer</span>
                 </div>
               </div>
