add new member(weerawat-TIKK)

--- a/index.html
+++ b/index.html
@@ -175,6 +175,18 @@
 
           <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
             <div class="member">
+              <img src="img/gee_me_065.png" class="" alt="" height="400px">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>TIKK - Weerawat</h4>
+                  <span>Sr. Developer</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
+            <div class="member">
               <img src="img/gee_me_002.png" class="" alt="" height="400px">
               <div class="member-info">
                 <div class="member-info-content">
@@ -184,6 +196,7 @@
               </div>
             </div>
           </div>
+
 
         </div>
 
