--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
           <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="member">
-              <img src="img/gee_me_001.png" class="" alt="" height="400px">
+              <img src="img/gee_me_019.svg" class="" alt="" height="400px">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Aoi - Suppachai</h4>
@@ -180,6 +180,18 @@
                 <div class="member-info-content">
                   <h4>TIKK - Weerawat</h4>
                   <span>Sr. Developer</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
+            <div class="member">
+              <img src="img/gee_me_034.png" class="" alt="" height="400px">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>IGQ - Chirakit</h4>
+                  <span>Product Manager</span>
                 </div>
               </div>
             </div>
