--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
 
+  <!-- Cookie Consent by https://www.cookiewow.com -->
+  <script type="text/javascript" src="https://cookiecdn.com/cwc.js"></script>
+  <script id="cookieWow" type="text/javascript" src="https://cookiecdn.com/configs/hRxy6xssABJ44HEaAcKcAd2o" data-cwcid="hRxy6xssABJ44HEaAcKcAd2o"></script>
 </head>
 
 <body>
